# testingDRF

testingDRF/: pyproject.toml  pytest.ini
testingDRF/classroom/: models.py  tests.py
testingDRF/classroom/migrations/: 0001_initial.py
testingDRF/school/: settings.py
