[tool.poetry]
name = "testingdrf"
version = "0.1.0"
description = ""
authors = ["dedoxd2 <dedo.xd33@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.6"
python-decouple = "^3.8"
mixer = "^7.2.2"
pytest = "^7.4.3"
pytest-django = "^4.5.2"
psycopg2-binary = "^2.9.9"
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
